# xmlpatcher

./: LICENSE  README.md  pyproject.toml
src/xmlpatcher/: __init__.py  transformation.py  xml_document.py
src/xmlpatcher/patches/: __init__.py  add_child.py  patch.py  remove.py  set_value.py
