[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xmlpatcher"
version = "1.0.2"
authors = [
  { name="Bip901", email="74911767+Bip901@users.noreply.github.com" },
]
description = "A convenient library for patching XML files with XPath."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "lxml>=4.9.3,<5"
]

[project.urls]
"Homepage" = "https://github.com/Bip901/xmlpatcher"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "W", "D417", "UP", "YTT", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
exclude = "venv"
